Bug 692866: Do not add a final newline when cutting/pasting.

Previously MuPDF would add a newline at the end of every line.
As requested in the bug, we here avoid adding a final newline.

Unlike the suggested patch, we avoid adding one, rather than
removing one.